[package]
name = "throw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_rapier3d = "0.23.0"
bevy-inspector-egui = "0.22.1"
bevy_editor_pls = "0.7.0"
bevy_gltf_blueprints = { version = "0.5"} 
bevy_gltf_components = { version = "0.2"} 
bevy_asset_loader = { version = "0.19.1", features = ["standard_dynamic_assets"] }

bevy_third_person_camera = "0.1.7"
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1